sumo/tests/sumo/errors/duplicates/net_depart_lane/errors.sumo
Error: Lane's '1to2_1' edge already has a depart lane.
Quitting (on error).
